syntax = "proto3";
option csharp_namespace = "BlazorBoilerplate.Server";

import "Enumerations.proto";
import "Common.proto";

message TestAutoMlRequest {
    string username = 1;
    string testData = 2;
    string sessionId = 3;
    string autoMlName = 4;
  }
  
  message TestAutoMlResponse {
    repeated string predictions = 1;
    float score = 2;
    float predictiontime = 3;
  }
  
  