syntax = "proto3";
option csharp_namespace = "BlazorBoilerplate.Server";

import "google/protobuf/any.proto";
import "Enumerations.proto";
import "Common.proto";

message GetSessionsRequest {
    string username = 1;
  }
  
message GetSessionsResponse {
    repeated string sessionIds = 1;
  }
  
message GetSessionStatusRequest {
    string username = 1;
    string id = 2;
  }
  
message GetSessionStatusResponse {
    string status = 1;
    repeated AutoMlStatus automls = 2;
    string datasetId = 3;
    string datasetName = 4;
    string task = 5;
    string configuration = 6;
    repeated string requiredMlLibraries = 7;
    repeated string requiredAutoMls = 8;
    string runtimeConstraints = 9;
    string datasetConfiguration = 10;
  }
 

message AutoMlStatus {
    string name = 1;
    string status = 2;
    repeated string messages = 3;
    float testScore = 4;
    float validationScore = 5;
    int32 runtime = 6;
    float predictiontime = 7;
    string library = 8;
    string model = 9;
  }